--- a/TeacherFox/app/src/main/res/layout/activity_main.xml
+++ b/TeacherFox/app/src/main/res/layout/activity_main.xml
@@ -13,4 +13,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Um grande início" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Testee"/>
 </RelativeLayout>
