Testando integração com Android Studio

--- a/TeacherFox/app/src/main/res/layout/activity_main.xml
+++ b/TeacherFox/app/src/main/res/layout/activity_main.xml
@@ -16,5 +16,5 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Testee"/>
+        android:text="Iniciar"/>
 </RelativeLayout>
