--- a/TeacherFox/app/src/main/res/layout/activity_main.xml
+++ b/TeacherFox/app/src/main/res/layout/activity_main.xml
@@ -7,14 +7,33 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.teacherfox.legendary.teacherfox.MainActivity">
 
+    tools:context="com.teacherfox.legendary.teacherfox.MainActivity">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingRight="10dp"
+    android:orientation="vertical">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Um grande início" />
-    <Button
+        android:text="@string/welcome"
+        android:layout_gravity="center"
+        android:layout_marginTop="40dp"
+        android:textSize="28dp"/>
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Iniciar"/>
+        android:layout_gravity="center"
+        android:layout_marginTop="200dp"
+        >
+        <Button
+            android:layout_width="200dp"
+            android:layout_height="100dp"
+android:textSize="40dp"
+            android:text="Iniciar"/>
+
+    </LinearLayout>
+</LinearLayout>
+
 </RelativeLayout>
