--- a/TeacherFox/app/src/main/res/layout/activity_main.xml
+++ b/TeacherFox/app/src/main/res/layout/activity_main.xml
@@ -30,8 +30,8 @@
         <Button
             android:layout_width="200dp"
             android:layout_height="100dp"
-android:textSize="40dp"
-            android:text="Iniciar"/>
+android:textSize="35dp"
+            android:text="Começar!"/>
 
     </LinearLayout>
 </LinearLayout>
