--- a/TeacherFox/app/src/main/res/layout/activity_main.xml
+++ b/TeacherFox/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-
+android:background="@color/colorPrimary"
     tools:context="com.teacherfox.legendary.teacherfox.MainActivity">
 <LinearLayout
     android:layout_width="match_parent"
@@ -20,6 +20,8 @@
         android:text="@string/welcome"
         android:layout_gravity="center"
         android:layout_marginTop="40dp"
+        android:textColor="#FFFFFF"
+        android:textStyle="bold"
         android:textSize="28dp"/>
     <LinearLayout
         android:layout_width="wrap_content"
@@ -30,7 +32,7 @@
         <Button
             android:layout_width="200dp"
             android:layout_height="100dp"
-android:textSize="35dp"
+            android:textSize="35dp"
             android:text="Começar!"/>
 
     </LinearLayout>
