--- a/TeacherFox/app/src/main/res/layout/activity_main.xml
+++ b/TeacherFox/app/src/main/res/layout/activity_main.xml
@@ -22,18 +22,22 @@ android:background="@color/colorPrimary"
         android:layout_marginTop="40dp"
         android:textColor="#FFFFFF"
         android:textStyle="bold"
-        android:textSize="28dp"/>
+        android:gravity="center"
+        android:textSize="40sp"
+        />
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="130dp"
         >
         <Button
             android:layout_width="200dp"
             android:layout_height="100dp"
             android:textSize="35dp"
-            android:text="Começar!"/>
+            android:text="Começar!"
+            android:onClick="msgteste"
+            />
 
     </LinearLayout>
 </LinearLayout>
