--- a/TeacherFox/app/src/main/res/layout/mainmenu.xml
+++ b/TeacherFox/app/src/main/res/layout/mainmenu.xml
@@ -1,22 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Test"
-    android:textSize="50sp"
-    android:id="@+id/textView">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="90dp"
+    android:background="@color/colorPrimary"
+    android:layout_gravity="right"
+    >
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
 
+    >
 
-</TextView>
-
-    <Button
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/button"
-        android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="63dp" />
+        android:text="Test"
+        android:textSize="35sp"
+        android:id="@+id/avtrname"
+        android:textColor="#FFFFFF"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true">
+
+
+    </TextView>
+
+    <Button
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+    <Button
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+</RelativeLayout>
+
+</LinearLayout>
+<LinearLayout
+    android:layout_width="120dp"
+    android:layout_height="120dp"
+    android:background="@color/colorPrimary"
+    android:layout_centerVertical="true"
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentStart="true"
+    android:layout_marginLeft="31dp"
+    android:layout_marginStart="31dp"
+    android:id="@+id/btn_jogorapido">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:text="@string/jogorapido"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:textColor="#FFFFFF"
+        android:layout_gravity="bottom|center"
+        android:layout_marginLeft="5dp"
+        android:layout_marginBottom="5dp"
+        />
+</LinearLayout>
+    <LinearLayout
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:background="@color/colorPrimary"
+        android:layout_marginLeft="24dp"
+        android:layout_marginStart="24dp"
+        android:id="@+id/btn_modoestudo"
+        android:layout_alignTop="@+id/btn_jogorapido"
+        android:layout_toRightOf="@+id/btn_jogorapido"
+        android:layout_toEndOf="@+id/btn_jogorapido">
+        <TextView
+            android:layout_width="match_parent"
+            android:text="@string/estudar"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="#FFFFFF"
+            android:layout_gravity="bottom|center"
+            android:layout_marginLeft="25dp"
+            android:layout_marginBottom="5dp" />
+
+    </LinearLayout>
 </RelativeLayout>
