--- a/TeacherFox/app/src/main/res/layout/mainmenu.xml
+++ b/TeacherFox/app/src/main/res/layout/mainmenu.xml
@@ -7,6 +7,11 @@
     android:background="@color/colorPrimary"
     android:layout_gravity="right"
     >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        >
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -27,20 +32,28 @@
 
     </TextView>
 
-    <Button
+    <ImageButton
         android:layout_width="45dp"
         android:layout_height="45dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-    <Button
+        android:layout_alignParentEnd="true"
+        android:backgroundTint="@color/colorAccent"
+        />
+    <ImageButton
         android:layout_width="45dp"
         android:layout_height="45dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:backgroundTint="@color/colorAccent"
+        />
 </RelativeLayout>
-
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="4dp"
+            android:background="@drawable/shadow" />
+    </LinearLayout>
 </LinearLayout>
 <LinearLayout
     android:layout_width="120dp"
