--- a/TeacherFox/app/src/main/res/layout/mainmenu.xml
+++ b/TeacherFox/app/src/main/res/layout/mainmenu.xml
@@ -1,105 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="90dp"
-    android:background="@color/colorPrimary"
-    android:layout_gravity="right"
-    >
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        >
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="match_parent" android:layout_height="match_parent" android:background="@color/colorBackground">
 
-    >
+<include
+    layout="@layout/barra" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Test"
-        android:textSize="35sp"
-        android:id="@+id/avtrname"
-        android:textColor="#000000"
-        android:alpha="0.8"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true">
-
-
-    </TextView>
-
-    <ImageButton
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:backgroundTint="@color/colorAccent"
-        />
-    <ImageButton
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:backgroundTint="@color/colorAccent"
-        />
-</RelativeLayout>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="4dp"
-            android:background="@drawable/shadow" />
-    </LinearLayout>
-</LinearLayout>
-<LinearLayout
-    android:layout_width="120dp"
-    android:layout_height="120dp"
-    android:background="@color/colorPrimary"
-    android:layout_centerVertical="true"
-    android:layout_alignParentLeft="true"
-    android:layout_alignParentStart="true"
-    android:layout_marginLeft="31dp"
-    android:layout_marginStart="31dp"
-    android:id="@+id/btn_jogorapido">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:text="@string/jogorapido"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:textColor="#000000"
-        android:alpha="0.8"
-        android:layout_gravity="bottom|center"
-        android:layout_marginLeft="5dp"
-        android:layout_marginBottom="5dp"
-        />
-</LinearLayout>
-    <LinearLayout
-        android:layout_width="120dp"
-        android:layout_height="120dp"
+    <RelativeLayout
+        android:layout_width="140dp"
+        android:layout_height="140dp"
         android:background="@color/colorPrimary"
-        android:layout_marginLeft="24dp"
-        android:layout_marginStart="24dp"
+        android:id="@+id/btn_jogorapido"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+
+        >
+<ImageView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:src="@drawable/clockicon"
+    android:id="@+id/imageView2"
+    android:layout_alignParentTop="true"
+    android:layout_centerHorizontal="true" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:text="@string/jogorapido"
+            android:layout_height="wrap_content"
+            android:textSize="23sp"
+            android:textStyle="bold"
+            android:textColor="@color/abc_primary_text_disable_only_material_light"
+            android:layout_gravity="bottom|center"
+            android:alpha="0.8"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:paddingBottom="10dp"
+            android:paddingRight="3dp"
+            />
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="140dp"
+        android:layout_height="140dp"
+        android:background="@color/colorPrimary"
         android:id="@+id/btn_modoestudo"
         android:layout_alignTop="@+id/btn_jogorapido"
-        android:layout_toRightOf="@+id/btn_jogorapido"
-        android:layout_toEndOf="@+id/btn_jogorapido">
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/bookicon"
+            android:id="@+id/imageView"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" />
         <TextView
             android:layout_width="wrap_content"
             android:text="@string/estudar"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
+            android:textSize="30sp"
             android:textStyle="bold"
-            android:textColor="#000000"
-            android:alpha="0.8"
+            android:textColor="@color/abc_primary_text_disable_only_material_light"
             android:layout_gravity="bottom|center"
-            android:layout_marginLeft="25dp"
-            android:layout_marginBottom="5dp" />
+            android:alpha="0.8"
+            android:layout_below="@+id/imageView"
+            android:layout_centerHorizontal="true" />
 
-    </LinearLayout>
-</RelativeLayout>
+    </RelativeLayout>
+    </RelativeLayout>
