--- a/TeacherFox/app/src/main/res/layout/activity_main.xml
+++ b/TeacherFox/app/src/main/res/layout/activity_main.xml
@@ -9,37 +9,52 @@
     android:paddingTop="@dimen/activity_vertical_margin"
 android:background="@color/colorPrimary"
     tools:context="com.teacherfox.legendary.teacherfox.MainActivity">
-<LinearLayout
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingRight="10dp"
-    android:orientation="vertical">
+    android:id="@+id/relativeLayout">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/welcome"
-        android:layout_gravity="center"
-        android:layout_marginTop="40dp"
+        android:gravity="center"
+
         android:textColor="#FFFFFF"
         android:textStyle="bold"
-        android:gravity="center"
-        android:textSize="40sp"
+
+        android:textSize="25sp"
         />
-    <LinearLayout
+
+
+</RelativeLayout>
+
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="130dp"
-        >
-        <Button
-            android:layout_width="200dp"
-            android:layout_height="100dp"
-            android:textSize="35dp"
-            android:text="Começar!"
-            android:onClick="msgteste"
-            />
+        android:textSize="35dp"
+        android:text="Começar!"
+        android:onClick="msgteste"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/button2" />
 
-    </LinearLayout>
-</LinearLayout>
+    <ImageView
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView3"
+        android:src="@drawable/rapo"
+        android:layout_above="@+id/button2"
+        android:layout_centerHorizontal="true" />
+
+    <EditText
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text="Dê um nome à raposa"
+        android:ems="10"
+        android:id="@+id/nomeRaposa"
+        android:layout_above="@+id/button2"
+        android:layout_alignLeft="@+id/button2"
+        android:layout_alignStart="@+id/button2" />
 
 </RelativeLayout>
