--- a/TeacherFox/app/src/main/res/layout/barra.xml
+++ b/TeacherFox/app/src/main/res/layout/barra.xml
@@ -61,6 +61,16 @@
                 android:scaleType="fitCenter"
                 android:padding="2dp" />
 
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageView4"
+                android:layout_toLeftOf="@+id/avtrname"
+                android:layout_toStartOf="@+id/avtrname"
+                android:src="@drawable/rapo"
+                android:layout_alignParentBottom="true"
+                android:layout_margin="4dp" />
+
         </RelativeLayout>
     </LinearLayout>
     <View
