--- a/TeacherFox/app/src/main/res/layout/questoes.xml
+++ b/TeacherFox/app/src/main/res/layout/questoes.xml
@@ -24,7 +24,10 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="orem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
+                android:textSize="15sp"
+                android:alpha="0.8"
+                android:textColor="@color/abc_primary_text_disable_only_material_light"
+                android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
 
                 />
 
@@ -53,12 +56,16 @@ android:orientation="vertical"
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="resposta"
+                    android:text="A) Resposta"
+                    android:alpha="0.8"
+                    android:textSize="23sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/abc_primary_text_disable_only_material_light"
                     android:layout_centerVertical="true"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_marginLeft="86dp"
-                    android:layout_marginStart="86dp" />
+                    android:layout_marginStart="40dp" />
             </RelativeLayout>
 
 
@@ -72,12 +79,16 @@ android:orientation="vertical"
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="resposta"
+            android:text="B) Resposta"
+            android:alpha="0.8"
+            android:textSize="23sp"
+            android:textStyle="bold"
+            android:textColor="@color/abc_primary_text_disable_only_material_light"
             android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_marginLeft="86dp"
-            android:layout_marginStart="86dp" />
+            android:layout_marginStart="40dp" />
     </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
@@ -88,12 +99,16 @@ android:orientation="vertical"
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="resposta"
+            android:text="C) Resposta"
+            android:alpha="0.8"
+            android:textSize="23sp"
+            android:textStyle="bold"
+            android:textColor="@color/abc_primary_text_disable_only_material_light"
             android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_marginLeft="86dp"
-            android:layout_marginStart="86dp" />
+            android:layout_marginStart="40dp" />
     </RelativeLayout>
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -104,12 +119,16 @@ android:orientation="vertical"
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="resposta"
+                    android:text="D) resposta"
+                    android:alpha="0.8"
+                    android:textSize="23sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/abc_primary_text_disable_only_material_light"
                     android:layout_centerVertical="true"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_marginLeft="86dp"
-                    android:layout_marginStart="86dp" />
+                    android:layout_marginStart="40dp" />
             </RelativeLayout>
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -120,12 +139,14 @@ android:orientation="vertical"
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="resposta"
+                    android:text="E) Resposta"
+                    android:alpha="0.8"
+                    android:textColor="@color/abc_primary_text_disable_only_material_light"
                     android:layout_centerVertical="true"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_marginLeft="86dp"
-                    android:layout_marginStart="86dp" />
+                    android:layout_marginStart="40dp" />
             </RelativeLayout>
         </LinearLayout>
     </ScrollView>
