--- a/TeacherFox/app/src/main/res/layout/mainmenu.xml
+++ b/TeacherFox/app/src/main/res/layout/mainmenu.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent" android:layout_height="match_parent" android:background="@color/colorBackground">
 
 <include
-    layout="@layout/barra" />
+    layout="@layout/barra" android:id="@+id/thebar" />
 
     <RelativeLayout
         android:layout_width="140dp"
