--- a/TeacherFox/app/src/main/res/layout/activity_main.xml
+++ b/TeacherFox/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,7 @@ android:background="@color/colorPrimary"
         android:textSize="35dp"
         android:text="Começar!"
         android:onClick="msgteste"
+        android:background="@drawable/botaoorg"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:id="@+id/button2" />
@@ -52,9 +53,8 @@ android:background="@color/colorPrimary"
         android:inputType="textPersonName"
         android:ems="10"
         android:id="@+id/nomeRaposa"
+        android:hint="Dê um nome à raposa"
         android:layout_above="@+id/button2"
-        android:layout_alignLeft="@+id/button2"
-        android:layout_alignStart="@+id/button2"
-        android:hint="Dê um nome à raposa" />
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
