--- a/TeacherFox/app/src/main/res/layout/barra.xml
+++ b/TeacherFox/app/src/main/res/layout/barra.xml
@@ -62,17 +62,25 @@
                 android:src="@drawable/shopicon"
                 android:scaleType="fitCenter"
                 android:padding="2dp"
-                android:id="@+id/imageButton" />
+                android:id="@+id/imageButton"
 
+                />
+
+            <RelativeLayout
+                android:layout_width="90dp"
+                android:layout_height="100dp"
+                android:id="@+id/Avatar"
+                android:background="@drawable/rapo"
+
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/imageView4"
-                android:layout_toLeftOf="@+id/avtrname"
-                android:layout_toStartOf="@+id/avtrname"
-                android:src="@drawable/rapo"
-                android:layout_alignParentBottom="true"
-                android:layout_margin="4dp" />
+                android:layout_width="100dp"
+                android:layout_height="30dp"
+                android:background="@drawable/shopicon"
+                android:visibility="invisible"
+                android:id="@+id/hatav" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -82,11 +90,32 @@
                 android:id="@+id/txMoney"
                 android:textStyle="bold"
                 android:textSize="30sp"
+                android:layout_alignTop="@+id/imageButton"
+                android:layout_toLeftOf="@+id/imageButton"
+                android:layout_toStartOf="@+id/imageButton" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="00"
+                android:id="@+id/txLvl"
+                android:textStyle="bold"
+                android:textSize="30sp"
+                android:layout_below="@+id/avtrname"
+                android:layout_toLeftOf="@+id/txExp"
+                android:layout_toStartOf="@+id/txExp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="00/00"
+                android:id="@+id/txExp"
                 android:layout_below="@+id/avtrname"
                 android:layout_alignRight="@+id/avtrname"
                 android:layout_alignEnd="@+id/avtrname" />
-
         </RelativeLayout>
+
     </LinearLayout>
     <View
         android:layout_width="match_parent"
