--- a/TeacherFox/app/src/main/res/layout/mainmenu.xml
+++ b/TeacherFox/app/src/main/res/layout/mainmenu.xml
@@ -8,7 +8,7 @@
     <RelativeLayout
         android:layout_width="140dp"
         android:layout_height="140dp"
-        android:background="@drawable/botao"
+        android:background="@drawable/botaomd"
         android:id="@+id/btn_jogorapido"
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
@@ -26,7 +26,7 @@ android:onClick="questao"
             android:layout_width="wrap_content"
             android:text="@string/jogorapido"
             android:layout_height="wrap_content"
-            android:textSize="23sp"
+            android:textSize="21sp"
             android:textStyle="bold"
             android:textColor="@color/abc_primary_text_disable_only_material_light"
             android:layout_gravity="bottom|center"
@@ -34,14 +34,14 @@ android:onClick="questao"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            android:paddingBottom="7dp"
-            android:paddingRight="5dp"
+            android:paddingBottom="8dp"
+            android:paddingRight="8dp"
             />
     </RelativeLayout>
     <RelativeLayout
         android:layout_width="140dp"
         android:layout_height="140dp"
-        android:background="@drawable/botao"
+        android:background="@drawable/botaomd"
         android:id="@+id/btn_modoestudo"
         android:layout_alignTop="@+id/btn_jogorapido"
         android:layout_alignParentRight="true"
@@ -69,7 +69,7 @@ android:onClick="questao"
     <RelativeLayout
         android:layout_width="200dp"
         android:layout_height="70dp"
-        android:background="@drawable/botao"
+        android:background="@drawable/botaomd"
         android:layout_below="@+id/btn_jogorapido"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="25dp">
