--- a/TeacherFox/app/src/main/res/layout/activity_main.xml
+++ b/TeacherFox/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-android:background="@color/colorPrimary"
+android:background="@drawable/butbg"
     tools:context="com.teacherfox.legendary.teacherfox.MainActivity">
 <RelativeLayout
     android:layout_width="match_parent"
@@ -30,11 +30,12 @@ android:background="@color/colorPrimary"
 
     <Button
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="35dp"
+        android:layout_height="60dp"
+        android:textSize="30dp"
         android:text="Começar!"
+
         android:onClick="msgteste"
-        android:background="@drawable/botaoorg"
+        android:background="@drawable/botaoorgmd"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:id="@+id/button2" />
@@ -44,7 +45,7 @@ android:background="@color/colorPrimary"
         android:layout_height="wrap_content"
         android:id="@+id/imageView3"
         android:src="@drawable/rapo"
-        android:layout_above="@+id/button2"
+        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
     <EditText
