--- a/TeacherFox/app/src/main/res/layout/mainmenu.xml
+++ b/TeacherFox/app/src/main/res/layout/mainmenu.xml
@@ -21,7 +21,8 @@ android:onClick="questao"
     android:src="@drawable/clockicon"
     android:id="@+id/imageView2"
     android:layout_alignParentTop="true"
-    android:layout_centerHorizontal="true" />
+    android:layout_centerHorizontal="true"
+    android:layout_marginTop="5dp" />
         <TextView
             android:layout_width="wrap_content"
             android:text="@string/jogorapido"
@@ -52,7 +53,8 @@ android:onClick="questao"
             android:src="@drawable/bookicon"
             android:id="@+id/imageView"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="5dp" />
         <TextView
             android:layout_width="wrap_content"
             android:text="@string/estudar"
@@ -76,27 +78,26 @@ android:onClick="questao"
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/settingsicon"
+            android:src="@drawable/shopicon"
             android:scaleType="fitCenter"
-            android:layout_toLeftOf="@+id/textView"
-            android:layout_toStartOf="@+id/textView"
             android:paddingLeft="5dp"
             android:paddingTop="5dp"
-            android:paddingBottom="5dp" />
+            android:paddingBottom="5dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/opcoes"
+            android:onClick="irLoja"
             android:textSize="30sp"
             android:textStyle="bold"
             android:textColor="@color/abc_primary_text_disable_only_material_light"
             android:alpha="0.8"
+            android:id="@+id/textView"
             android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginRight="25dp"
-            android:layout_marginEnd="25dp"
-            android:id="@+id/textView" />
+            android:layout_centerHorizontal="true" />
 
 
     </RelativeLayout>
