--- a/TeacherFox/app/src/main/res/layout/resultscreen.xml
+++ b/TeacherFox/app/src/main/res/layout/resultscreen.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+    android:background="@drawable/butbg"
     tools:context="com.teacherfox.legendary.teacherfox.Results">
 
     <TextView
@@ -35,13 +35,14 @@
         android:layout_height="wrap_content"
         android:id="@+id/imageView5"
         android:src="@drawable/foxx"
+        android:layout_margin="20dp"
         android:layout_below="@+id/txRes"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_above="@+id/gotMoney" />
 
     <RelativeLayout
-        android:background="@drawable/botaoorg"
+        android:background="@drawable/botaoorgmd"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/imageView5"
