Melhorias na loja 2

--- a/TeacherFox/app/src/main/res/layout/barra.xml
+++ b/TeacherFox/app/src/main/res/layout/barra.xml
@@ -76,8 +76,8 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true" />
             <ImageView
-                android:layout_width="100dp"
-                android:layout_height="30dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:background="@drawable/shopicon"
                 android:visibility="invisible"
                 android:id="@+id/hatav" />
