--- a/TeacherFox/app/src/main/res/layout/activity_loja.xml
+++ b/TeacherFox/app/src/main/res/layout/activity_loja.xml
@@ -33,7 +33,7 @@ android:layout_marginTop="5dp"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textSize="35sp"
-            android:text="$00"
+            android:text="00"
             android:id="@+id/iLoja1c"
             android:layout_below="@+id/iloja1p"
             android:layout_centerHorizontal="true" />
