--- a/TeacherFox/app/src/main/res/layout/barra.xml
+++ b/TeacherFox/app/src/main/res/layout/barra.xml
@@ -70,7 +70,7 @@
                 android:layout_width="90dp"
                 android:layout_height="100dp"
                 android:id="@+id/Avatar"
-                android:background="@drawable/rapo"
+                android:background="@drawable/skin0"
 
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
