--- a/TeacherFox/app/src/main/res/layout/mainmenu.xml
+++ b/TeacherFox/app/src/main/res/layout/mainmenu.xml
@@ -46,6 +46,7 @@
         android:id="@+id/btn_modoestudo"
         android:layout_alignTop="@+id/btn_jogorapido"
         android:layout_alignParentRight="true"
+        android:onClick="irEst"
         android:layout_alignParentEnd="true">
         <ImageView
             android:layout_width="wrap_content"
