--- a/TeacherFox/app/src/main/res/layout/questoes.xml
+++ b/TeacherFox/app/src/main/res/layout/questoes.xml
@@ -51,7 +51,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:background="@drawable/botaomd"
+                android:background="@drawable/botaomdbg"
                 android:layout_marginBottom="3dp"
                 android:onClick="resposta"
                 android:id="@+id/baltea">
@@ -76,7 +76,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:background="@drawable/botaomd"
+                android:background="@drawable/botaomdbg"
                 android:onClick="resposta"
                 android:layout_marginBottom="3dp"
                 android:id="@+id/balteb">
@@ -98,7 +98,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:background="@drawable/botaomd"
+                android:background="@drawable/botaomdbg"
                 android:onClick="resposta"
                 android:layout_marginBottom="3dp"
                 android:id="@+id/baltec">
@@ -121,7 +121,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:background="@drawable/botaomd"
+                android:background="@drawable/botaomdbg"
                 android:onClick="resposta"
                 android:layout_marginBottom="3dp"
                 android:id="@+id/balted">
@@ -143,7 +143,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:background="@drawable/botaomd"
+                android:background="@drawable/botaomdbg"
                 android:onClick="resposta"
                 android:layout_marginBottom="3dp"
                 android:id="@+id/baltee">
