--- a/TeacherFox/app/src/main/res/layout/resultscreen.xml
+++ b/TeacherFox/app/src/main/res/layout/resultscreen.xml
@@ -31,8 +31,8 @@
     <RelativeLayout
         android:layout_width="250dp"
         android:layout_height="300dp"
-        android:id="@+id/imageView5"
-        android:background="@drawable/foxx"
+        android:id="@+id/foxfull"
+        android:background="@drawable/skin0full"
         android:layout_below="@+id/txRes"
         android:layout_centerHorizontal="true">
         <ImageView
